[2019-04-10][稳定版] v2.1.2 build 201904100002
1. 个人设置新增“发货跟踪模式”切换按钮，可自由切换新老发货跟踪模式
2. 监控中心订单量数据采用子订单数显示

[2019-04-10][稳定版] v2.1.2 build 201904100001
1. 修补新版发货已知bug
2. 统计数据增加子订单数量
3. boss看板增加昨日订单数据

[2019-04-08][稳定版] v2.1.2 build 201904080001
1. 更新地址及买家旺旺解密接口
2. 优化发货接口遇到风控提示，将滑动验证弹出
3. 使用新的自动发货功能
4. 增加已下单订单查询改价功能
5. 一些其他修改

[2019-04-05][稳定版] v2.1.2 build 201904050001
1. 修改自动发货接口调用
2. 增加发货接口遇到风控提示功能
3. 一些其他修改

[2019-03-19][稳定版] v2.1.2 build 201903190001
1. 增加店铺黑名单原因备注功能，买手下单时将提示加入黑名单的原因
2. 历史下单管理增加按下单地址批量删除功能

[2019-03-13][稳定版] v2.1.2 build 201903130001
1. 增加修改买家留言功能
2. 盈亏分析列表增加买家号和下单链接
3. 增加店主集中发货功能

[2019-03-03][稳定版] v2.1.2 build 201903030001
1. 修复历史下单无法显示页面的问题
2. 修复多个子订单的备注问题

[2019-03-02][稳定版] v2.1.2 build 201903020001
1. 修复下单502的神(gui)奇(yi)问题

[2019-02-22][稳定版] v2.1.2 build 201902220001
1. 修改下单动作接口

[2019-02-16][稳定版] v2.1.2 build 201902160001
1. 订单利润统计、买手下单报表等功能剥离，称为独立子项目，改善服务性能
2、订单增加修改收货人电话号码功能
3、修复多个子订单连续下单情况利润不显示的问题

[2019-01-17][稳定版] v2.1.2 build 201901170001
1. 已分配、已下单、已完成、已退单订单列表增加收货人姓名列，可进行检索
2、增加代发商品管理
3、新增接口，大幅提升已分配订单页面加载速度

[2019-01-02][DEV版] v2.1.2 build 201901020001
1. 买手报表改为离线任务
2. 监控中心下单排行榜修改

[2018-12-28][稳定版] v2.1.2 build 20181228001
1. 优化订单列表显示速度
2. 修复发货接口错误

[2018-12-27][稳定版] v2.1.2 build 20181227001
1. 修复买手修改名称BUG
2. 优化订单列表显示项，去除收货人信息，增加商品标题

[2018-12-24][稳定版] v2.1.2 build 20181224002
1. 修复买手今日统计刷新累加问题

[2018-12-24][DEV版] v2.1.2 build 20181224001
1. 修复手机号码检测号段遗漏

[2018-12-23][DEV版] v2.1.2 build 20181223001
1. 增加订单固话号码转换功能
2. 利润统计报表初始载入本月报表数据

[2018-12-17][稳定版] v2.1.2 build 20181217002
1. 修复我的数据刷新累加问题
2. 恢复淘宝地址验证接口，一定程度上减少地址无法录入问题

[2018-12-12][稳定版] v2.1.2 build 20181212002
1. 修复不使用联想地址后的地址错位问题

[2018-12-12][稳定版] v2.1.2 build 20181212001
1. 修复淘宝新增地址报townId未知问题
2. 修复检查更新本地缓存的问题

[2018-12-08][DEV版] v2.1.2 build 20181208001
1. 买手管理列表增加user_id显示
2. 买手报表增加分页功能

[2018-12-05][DEV版] v2.1.2 build 20181205001
1. 统计利润接口使用队列管理
2. 每日更新年度、当月利润统计并缓存
3. 修复利润不准确bug
4. 下单操作使用队列管理
5. 日期区间利润统计窗口调整为60天

[2018-11-23][稳定版] v2.1.1 build 20181123001