@@ -1,3 +1,6 @@
+[2019-04-11][稳定版] v2.1.2 build 201904110002
+1. 赋予manager买手管理权限，可增删改
+
 [2019-04-10][稳定版] v2.1.2 build 201904100002
 1. 个人设置新增“发货跟踪模式”切换按钮，可自由切换新老发货跟踪模式
 2. 监控中心订单量数据采用子订单数显示
